# Advent-of-code-2021

./: day1.py  day10.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  new_day.py  pyproject.toml
day01/: solution.py
day02/: solution.py
day03/: solution.py
day04/: solution.py
day05/: solution.py
day06/: solution.py
day07/: solution.py
day08/: solution.py
day09/: solution.py
day10/: solution.py
day11/: solution.py  test_solution.py
day12/: solution.py  test_solution.py
day13/: solution.py  test_solution.py
day14/: solution.py  test_solution.py
day15/: solution.py  test_solution.py
